@@ -19,13 +19,14 @@ repository.type   = git
 
 [Prereqs]
 perl = 5.10.1
+File::Find::Rule = 0
 File::Share = 0
 Module::Runtime = 0
 Moose = 0
 Template = 0
 Test::BDD::Cucumber = 0.57
 Weasel = 0
-Weasel::Session = 0.08
+Weasel::Session = 0.11
 ; depend on the same YAML library as Test::BDD::Cucumber
 YAML::Syck = 0
 
